force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Powerof_attorney_for_household_member__c.field-meta.xml
<CustomField>
    <fullName>CC_Powerof_attorney_for_household_member__c</fullName>
    <inlineHelpText>Does this member have power of attorney for any household member?</inlineHelpText>
    <label>Power of attorney for household member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>