force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Preliminary_Application_Reference__c.field-meta.xml
<CustomField>
    <fullName>CC_Preliminary_Application_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preliminary Application Reference</label>
    <referenceTo>PreliminaryApplicationRef</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>