force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>CC_Primary_Language__c</fullName>
    <label>What is your primary spoken language?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Primary_language</valueSetName>
    </valueSet>
</CustomField>