force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Contacts (Provider Account)</relationshipLabel>
    <relationshipName>Application_Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>