force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Race_Origin__c.field-meta.xml
<CustomField>
    <fullName>CC_Race_Origin__c</fullName>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Race</valueSetName>
    </valueSet>
</CustomField>