force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Related_Record_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Related_Record_Reference_Id__c</fullName>
    <label>Related Record Reference Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>