force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Relationship_to_Provider__c.field-meta.xml
<CustomField>
    <fullName>CC_Relationship_to_Provider__c</fullName>
    <label>Relationship to Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>First Cousin</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>Niece</fullName>
            </value>
            <value>
                <fullName>Grand Child</fullName>
            </value>
            <value>
                <fullName>Great Grand Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>