force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Relationship_Type</valueSetName>
    </valueSet>
</CustomField>