force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>