force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Role__c.field-meta.xml
<CustomField>
    <fullName>CC_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Co-applicant</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Co-Owner</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>EC Assistant Teacher</fullName>
            </value>
            <value>
                <fullName>EC Lead Teacher</fullName>
            </value>
            <value>
                <fullName>EC Teacher</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Substitute Provider</fullName>
            </value>
            <value>
                <fullName>Trainee</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Facility Staff Member</fullName>
            </value>
            <value>
                <fullName>Household Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>