force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Safe_Sleep_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Safe_Sleep_Training_Date__c</fullName>
    <label>Safe Sleep Training Date</label>
    <type>Date</type>
</CustomField>