force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Safety_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Safety_Completion_Date__c</fullName>
    <label>Safety Completion Date</label>
    <type>Date</type>
</CustomField>