force-app/main/default/objects/CC_Application_Contact__c/fields/CC_School_City__c.field-meta.xml
<CustomField>
    <fullName>CC_School_City__c</fullName>
    <label>School City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>