force-app/main/default/objects/CC_Application_Contact__c/fields/CC_School_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_School_Street_Address__c</fullName>
    <label>School Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>