force-app/main/default/objects/CC_Application_Contact__c/fields/CC_School_Zip__c.field-meta.xml
<CustomField>
    <fullName>CC_School_Zip__c</fullName>
    <label>School Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>