force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Shaken_Baby_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Shaken_Baby_Training_Date__c</fullName>
    <label>Shaken Baby Training Date</label>
    <type>Date</type>
</CustomField>