force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Shipping_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Shipping_County__c</fullName>
    <label>Shipping County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>