force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Shipping_County_Other__c.field-meta.xml
<CustomField>
    <fullName>CC_Shipping_County_Other__c</fullName>
    <label>Shipping County(Other)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>