force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Signature__c.field-meta.xml
<CustomField>
    <fullName>CC_Signature__c</fullName>
    <label>Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>