force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Source_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CC_Source_Identifier__c</fullName>
    <description>This indicates the source identifier in format &quot;IAName - ProgramEnrollmentName - Type of application&quot;</description>
    <label>Source Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>