force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Start_Date__c</fullName>
    <description>Track of start date from when member is added</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>