force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending Associate</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>