force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over 85% SMI</fullName>
            </value>
            <value>
                <fullName>Foster Care Day Care</fullName>
            </value>
            <value>
                <fullName>HDN</fullName>
            </value>
            <value>
                <fullName>Alternative Care IV-E</fullName>
            </value>
            <value>
                <fullName>Title XIX(FFP)</fullName>
            </value>
            <value>
                <fullName>Adoption Subsidy HDN</fullName>
            </value>
            <value>
                <fullName>Adoption Subsidy IV-E</fullName>
            </value>
            <value>
                <fullName>Adoption Subsidy FFP</fullName>
            </value>
            <value>
                <fullName>Sub Guardianship</fullName>
            </value>
            <value>
                <fullName>Title IV-E Guardianship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>