force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>