force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CC_Suffix__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jr.</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>VII</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>