force-app/main/default/objects/CC_Application_Contact__c/fields/CC_TDAP_Immunization_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_TDAP_Immunization_Date__c</fullName>
    <label>TDAP Immunization Date</label>
    <type>Date</type>
</CustomField>