force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Temporarily_out_of_home__c.field-meta.xml
<CustomField>
    <fullName>CC_Temporarily_out_of_home__c</fullName>
    <inlineHelpText>Is this member temporarily out of the home (for example, live with other parent, with relatives, away at school, incarcerated, in a hospital, deployment, etc.)?</inlineHelpText>
    <label>Temporarily out of home?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>