force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Text_Preference__c.field-meta.xml
<CustomField>
    <fullName>CC_Text_Preference__c</fullName>
    <label>Text Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Alternate Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>