force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Total_Verified_Income__c.field-meta.xml
<CustomField>
    <fullName>CC_Total_Verified_Income__c</fullName>
    <label>Total Verified Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>