force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Totals_Hours_Requested__c.field-meta.xml
<CustomField>
    <fullName>CC_Totals_Hours_Requested__c</fullName>
    <label>Totals Hours Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>