force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Training_Review_completed_for__c.field-meta.xml
<CustomField>
    <fullName>CC_Training_Review_completed_for__c</fullName>
    <label>Training Review completed for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Site Director</fullName>
            </value>
            <value>
                <fullName>Lead Teacher</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Substitute</fullName>
            </value>
            <value>
                <fullName>Trainee</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Other Adult</fullName>
            </value>
            <value>
                <fullName>RCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>