force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Training_Status__c</fullName>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Not Compliant</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>