force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Training_Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>CC_Training_Status_Comment__c</fullName>
    <label>Training Status Comment</label>
    <type>TextArea</type>
</CustomField>