force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Tribal_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>CC_Tribal_Affiliation__c</fullName>
    <label>Tribal Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apache Arapaho</fullName>
            </value>
            <value>
                <fullName>Assiniboine</fullName>
            </value>
            <value>
                <fullName>Alackbong Sioux</fullName>
            </value>
            <value>
                <fullName>Blood</fullName>
            </value>
            <value>
                <fullName>Cherokee</fullName>
            </value>
            <value>
                <fullName>Chippewa ree</fullName>
            </value>
            <value>
                <fullName>Coeur DAgene</fullName>
            </value>
            <value>
                <fullName>Crow</fullName>
            </value>
            <value>
                <fullName>Flathead</fullName>
            </value>
            <value>
                <fullName>Gros Ventre</fullName>
            </value>
            <value>
                <fullName>Kootenai</fullName>
            </value>
            <value>
                <fullName>Little Shell</fullName>
            </value>
            <value>
                <fullName>Nez Perce</fullName>
            </value>
            <value>
                <fullName>Northern Cheyenne</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Piegan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>