force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Tribal_Enrollment_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Tribal_Enrollment_Number__c</fullName>
    <label>Tribal Enrollment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>