force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Type_of_School__c.field-meta.xml
<CustomField>
    <fullName>CC_Type_of_School__c</fullName>
    <label>Type of School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College or University</fullName>
            </value>
            <value>
                <fullName>Early Head Start</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Head Start</fullName>
            </value>
            <value>
                <fullName>High School or HiSet</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>Middle School or Junior High</fullName>
            </value>
            <value>
                <fullName>Not Attending School (Infant, etc.)</fullName>
            </value>
            <value>
                <fullName>Pre-Kindergarten Program</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vocational Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>