force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Unique_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Unique_Identification_Number__c</fullName>
    <label>Unique Identification Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>