force-app/main/default/objects/CC_Application_Contact__c/fields/CC_US_Citizen_or_Qualified_Alien__c.field-meta.xml
<CustomField>
    <fullName>CC_US_Citizen_or_Qualified_Alien__c</fullName>
    <inlineHelpText>Is this person a United States Citizen or residing in United States under a Qualified Alien Status?</inlineHelpText>
    <label>US Citizen or Qualified Alien?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>