force-app/main/default/objects/CC_Application_Contact__c/fields/CC_What_is_your_household_makeup__c.field-meta.xml
<CustomField>
    <fullName>CC_What_is_your_household_makeup__c</fullName>
    <label>What is your household makeup?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Parent Household</fullName>
            </value>
            <value>
                <fullName>Two Parent Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>