force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Working_more_than_500_hours_per_year__c.field-meta.xml
<CustomField>
    <fullName>CC_Working_more_than_500_hours_per_year__c</fullName>
    <label>Working more than 500 hours per year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>