force-app/main/default/objects/CC_Application_Contact__c/recordTypes/CC_Family_Household.recordType-meta.xml
<RecordType>
    <fullName>CC_Family_Household</fullName>
    <active>true</active>
    <description>Record type for parent portal intake application PAPs</description>
    <label>Family Household</label>
</RecordType>