force-app/main/default/objects/CC_Application_Contact__c/recordTypes/CC_Individual_Record.recordType-meta.xml
<RecordType>
    <fullName>CC_Individual_Record</fullName>
    <active>true</active>
    <label>Individual</label>
</RecordType>