force-app/main/default/objects/CC_Application_Contact__c/recordTypes/Family_Member.recordType-meta.xml
<RecordType>
    <fullName>Family_Member</fullName>
    <active>true</active>
    <description>Record type for Family Association Details on FFN RCE Step</description>
    <label>Family Member</label>
</RecordType>