force-app/main/default/objects/CC_Application_Contact__c/recordTypes/Provider_Staff.recordType-meta.xml
<RecordType>
    <fullName>Provider_Staff</fullName>
    <active>true</active>
    <label>Provider Staff</label>
</RecordType>